manifests/prod/bencher/Service-bencher.yaml
apiVersion: v1
kind: Service
metadata:
  name: bencher
  namespace: bencher
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3008
  type: ClusterIP
