manifests/prod/bencher/Ingress-bencher.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: k3s-lan-ca
    gethomepage.dev/description: Continuous benchmarking UI
    gethomepage.dev/enabled: "true"
    gethomepage.dev/external: "true"
    gethomepage.dev/group: DevOps
    gethomepage.dev/icon: mdi-speedometer
    gethomepage.dev/name: bencher
    gethomepage.dev/siteMonitor: http://bencher.bencher.svc.cluster.local
  name: bencher
  namespace: bencher
spec:
  ingressClassName: traefik
  rules:
    - host: bencher.k3s.lan
      http:
        paths:
          - backend:
              service:
                name: bencher
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - bencher.k3s.lan
      secretName: bencher-tls
